fix overflow

--- a/app/assets/style/_layout.scss
+++ b/app/assets/style/_layout.scss
@@ -1,3 +1,8 @@
+html,
+body {
+  overflow-x: hidden;
+  width: 100%;
+}
 .darkShady {
   display: none;
 }
